# mock-tweet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tweet.drawio
app/api/tweets/: tweets.py
app/api/users/: user_authentication.py  user_signup.py
app/models/: tweets.py  users.py
app/schemas/: messages.py  tweets.py  users.py
lib/core/: .gitignore  README.md  pyproject.toml
lib/core/alembic/: env.py
lib/core/alembic/versions/: 5bad5c4d6530_tweet_like_counts.py  da484a707b86_kafka_offset.py  fe09a0828d31_follow_count_schema.py
lib/core/core/dataclass_containers/: tweets.py
lib/core/core/models/: tweets.py  users.py
lib/core/core/pg_models/: base.py  base_class.py  followers.py  kafka_offset.py  tweets.py
lib/core/core/schemas/: images.py  tweets.py  users.py
lib/core/core/utils/: auth.py  constants.py  create_pg_records.py  db_util.py  kafka_util.py  s3_util.py
lib/core/core/utils/tweets/: parsers.py  rest_utils.py
lib/core/users/: constants.py
lib/core/utils/: auth.py  constants.py
lib/core/utils/tweets/: parsers.py  rest_utils.py
services/tweet_backend/: main.py  pyproject.toml
services/tweet_backend/app/api/tweets/: tweets.py
services/tweet_backend/app/api/users/: user_authentication.py
services/tweet_follow/: main.py  pyproject.toml
services/tweet_follow/api/: follow.py
services/tweet_frontend/src/: route.jsx
services/tweet_frontend/src/components/layouts/: Navbar.tsx
services/tweet_frontend/src/components/tweets/: AddTweet.tsx  Tweet.tsx
services/tweet_frontend/src/components/users/: UserProfile.jsx  Users.jsx
services/tweet_frontend/src/utils/: api.tsx
services/tweet_images/: main.py  pyproject.toml  test.py
services/tweet_images/api/: images.py
services/tweet_kafka/: main.py  pyproject.toml
services/tweet_kafka/consumers/: tweet_like_consumer.py
services/tweet_user/: main.py  pyproject.toml
services/tweet_user/api/: users.py
